--- a/package.json
+++ b/package.json
@@ -7,20 +7,20 @@
     "test": "jest"
   },
   "dependencies": {
-    "expo": "^34.0.1",
+    "expo": "^35.0.0",
     "react": "16.8.3",
-    "react-dom": "^16.8.6",
-    "react-native": "0.59.8",
+    "react-dom": "16.8.3",
+    "react-native": "0.59.10",
     "react-native-gesture-handler": "~1.3.0",
-    "react-native-reanimated": "~1.1.0",
-    "react-native-unimodules": "~0.5.2",
-    "react-native-web": "^0.11.4",
+    "react-native-reanimated": "~1.2.0",
+    "react-native-unimodules": "0.6.0",
+    "react-native-web": "^0.11.7",
     "react-navigation": "^3.11.1"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
-    "babel-preset-expo": "^6.0.0",
-    "jest-expo": "^34.0.0"
+    "babel-preset-expo": "^7.0.0",
+    "jest-expo": "^35.0.0"
   },
   "jest": {
     "preset": "react-native"
