--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dom": "16.9.0",
     "react-native": "0.61.4",
     "react-native-gesture-handler": "~1.5.0",
+    "react-native-modal": "^11.5.6",
     "react-native-reanimated": "~1.4.0",
     "react-native-safe-area-context": "^0.7.3",
     "react-native-screens": "^2.2.0",
