--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "@react-navigation/stack": "^5.1.1",
     "add": "^2.0.6",
     "expo": "^36.0.0",
+    "expo-barcode-scanner": "~8.0.0",
     "firebase": "^7.14.4",
+    "prettier": "^2.0.5",
     "react": "16.9.0",
     "react-dom": "16.9.0",
     "react-native": "0.61.4",
